--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,10 @@
 		</web-resource-collection>
 		<auth-constraint />
 	</security-constraint>
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/RabbitChatWebDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
