--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 			<artifactId>amqp-client</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
