Corrigida referência da base

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 	</security-constraint>
 	<resource-ref>
 		<description>DB Connection</description>
-		<res-ref-name>jdbc/RabbitChatWebDB</res-ref-name>
+		<res-ref-name>jdbc/RabbitChatDB</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
