--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,7 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	<listener>
+		<listener-class>br.com.ufs.sd.whatsupp.infra.WhatsuppServletContextListener</listener-class>
+	</listener>
 </web-app>
